testdata/baselines/reference/submodule/conformance/jsdocTypeFromChainedAssignment.errors.txt
a.js(7,44): error TS7006: Parameter 'n' implicitly has an 'any' type.
a.js(11,24): error TS7006: Parameter 'm' implicitly has an 'any' type.
a.js(14,9): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== a.js (3 errors) ====
    function A () {
        this.x = 1
        /** @type {1} */
        this.first = this.second = 1
    }
    /** @param {number} n */
    A.prototype.y = A.prototype.z = function f(n) {
                                               ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
        return n + this.x
    }
    /** @param {number} m */
    A.s = A.t = function g(m) {
                           ~
!!! error TS7006: Parameter 'm' implicitly has an 'any' type.
        return m + this.x
    }
    var a = new A()
            ~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    a.y('no') // error
    a.z('not really') // error
    A.s('still no') // error
    A.t('not here either') // error
    a.first = 10 // error: '10' isn't assignable to '1'
    